--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <html data-bs-theme="dark">
-<body>
-<h1>WELCOME TO PHOENIX</h1>
-<img src="original-5a1c0096892fafbb142d10da4b031d70.jpg" alt="phoenix image ignore">
-</body>
+	<body>
+		<h1>WELCOME TO PHOENIX</h1>
+		<img src="original-5a1c0096892fafbb142d10da4b031d70.jpg" alt="phoenix image ignore">
+		<a href="login/login.html">login</a>
+	</body>
 
 </html>
