"Added HTML head section with CSS style to set body background color to blueviolet."

--- a/login.html
+++ b/login.html
@@ -1,4 +1,12 @@
-<html>
+<html>	  
+	<head>
+		<style>
+			body{
+			background-color: blueviolet;
+			}
+
+		</style>
+		</head>
 	<body>
 		hi
 	</body>
