--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 	<body>
 		<h1>WELCOME TO PHOENIX</h1>
 		<img src="original-5a1c0096892fafbb142d10da4b031d70.jpg" alt="phoenix image ignore">
-		<a href="login.html">login</a>
+		<a href="login/login.html">login</a>
 	</body>
 
 </html>
